<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cycling_history_card"
        card_view:cardBackgroundColor="@color/history_card"
        card_view:cardCornerRadius="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="@dimen/card_margin"
        android:layout_marginBottom="@dimen/card_margin"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/card_date"
                android:text="@string/date_time_placeholder"
                android:textStyle="bold"
                android:textSize="@dimen/card_subheading"
                android:textColor="@color/ui_background"
                android:layout_marginTop="@dimen/card_margin"
                android:layout_marginStart="@dimen/fragment_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                android:id="@+id/card_distance_float"
                android:text="@string/distance_placeholder"
                android:textStyle="bold"
                android:textSize="@dimen/card_float"
                android:layout_marginTop="@dimen/card_margin"
                android:layout_marginStart="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_date"/>
            <TextView
                android:id="@+id/card_distance_units"
                android:text="@string/distance_km"
                android:textSize="@dimen/card_subheading"
                android:layout_marginTop="@dimen/card_margin"
                android:layout_marginStart="@dimen/card_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/card_distance_float"
                app:layout_constraintBottom_toBottomOf="@id/card_distance_float"/>
            <TextView
                android:id="@+id/card_distance_text"
                android:text="@string/distance_text"
                android:textStyle="bold"
                android:textSize="@dimen/card_subheading"
                android:textColor="@color/ui_background"
                android:layout_marginEnd="@dimen/card_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/card_distance_float"
                app:layout_constraintEnd_toEndOf="@id/card_distance_units"
                app:layout_constraintTop_toBottomOf="@id/card_distance_float"/>
            <TextView
                android:id="@+id/card_speed_float"
                android:text="@string/avg_speed_placeholder"
                android:textStyle="bold"
                android:textSize="@dimen/card_float"
                android:layout_marginTop="@dimen/card_margin"
                android:layout_marginEnd="@dimen/card_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@id/card_speed_units"
                app:layout_constraintTop_toBottomOf="@id/card_date"/>

            <TextView
                android:id="@+id/card_speed_units"
                android:text="@string/avg_speed_unit"
                android:textSize="@dimen/card_subheading"
                android:layout_marginTop="@dimen/card_margin"
                android:layout_marginEnd="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/card_speed_float"/>
            <TextView
                android:id="@+id/card_speed_text"
                android:text="@string/speed_text"
                android:textStyle="bold"
                android:textSize="@dimen/card_subheading"
                android:textColor="@color/ui_background"
                android:layout_marginEnd="@dimen/card_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/card_speed_float"
                app:layout_constraintEnd_toEndOf="@id/card_speed_units"
                app:layout_constraintTop_toBottomOf="@id/card_speed_float"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>