<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity"
    android:background="#ADBADE">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/image_container"
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:background="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

                <ImageView
                    android:id="@+id/login_image"
                    android:layout_width="499dp"
                    android:layout_height="451dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.397"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/login_page" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/dela_gothic_one"
            android:text="@string/app_name"
            android:textColor="#47599B"
            android:textSize="48sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_container" />

        <Button
            android:id="@+id/sign_in_button"
            android:text="@string/google_login_button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:background="@drawable/rounded_corner"
            android:theme="@style/Button.Blue"
            android:textSize="15.5sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_title">
        </Button>

        <Button
            android:id="@+id/email_sign_in_button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="22dp"
            android:background="@drawable/rounded_corner"
            android:text="@string/continue_with_email"
            android:theme="@style/Button.Blue"
            android:textSize="15.5sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_button"></Button>


</androidx.constraintlayout.widget.ConstraintLayout>