<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.history.CyclingHistoryFragment">

    <TextView
        android:id="@+id/cycling_history_title"
        android:layout_width="390dp"
        android:layout_height="39dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/cycling_history_title"
        android:textColor="#47599B"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/cycling_history_goal"
        android:text="@string/cycling_history_goal"
        android:textSize="@dimen/subheading_size"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/cycling_history_title"/>

    <TextView
        android:id="@+id/edit_goal"
        android:text="@string/edit_goals"
        android:textSize="16sp"
        android:textColor="#238489"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="@+id/cycling_history_goal"
        app:layout_constraintBottom_toBottomOf="@+id/cycling_history_goal"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cycling_goals_card"
        card_view:cardBackgroundColor="#24629A"
        card_view:cardCornerRadius="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        app:layout_constraintTop_toBottomOf="@+id/cycling_history_goal">

        <androidx.percentlayout.widget.PercentRelativeLayout
            android:id="@+id/cycling_details_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/distance_progress_bar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="false"
                android:progressDrawable="@drawable/circular_progress_bar"
                app:layout_heightPercent="95%"
                app:layout_marginLeftPercent="4%"
                app:layout_marginTopPercent="2%"
                app:layout_widthPercent="48%" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/distance_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_marginStartPercent="5%"
                app:layout_heightPercent="50%"
                app:layout_marginTopPercent="25%"
                app:layout_widthPercent="45%">

                <ImageView
                    android:id="@+id/distance_details_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_cycling"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/card_margin"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/distance_details_image">

                    <TextView
                        android:id="@+id/distance_details_float"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:text="@string/distance_placeholder"
                        android:textColor="@color/white"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/distance_details_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:text="@string/distance_km_with_slash"
                        android:textColor="@color/white"
                        android:textSize="16dp"
                        app:layout_constraintBottom_toBottomOf="@+id/distance_details_float"
                        app:layout_constraintStart_toEndOf="@+id/distance_details_float" />

                    <TextView
                        android:id="@+id/distance_goals_float"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/distance_placeholder"
                        android:textColor="@color/white"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/distance_details_float"
                        app:layout_constraintTop_toBottomOf="@+id/distance_details_float" />

                    <TextView
                        android:id="@+id/distance_goals_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/distance_km"
                        android:textColor="@color/white"
                        android:textSize="16dp"
                        app:layout_constraintBottom_toBottomOf="@+id/distance_goals_float"
                        app:layout_constraintStart_toStartOf="@+id/distance_details_text" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <ProgressBar
                android:id="@+id/time_progress_bar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="false"
                android:progressDrawable="@drawable/circular_progress_bar"
                app:layout_heightPercent="95%"
                app:layout_marginLeftPercent="50%"
                app:layout_marginTopPercent="2%"
                app:layout_widthPercent="48%" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/time_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_heightPercent="50%"
                app:layout_marginLeftPercent="48%"
                app:layout_marginTopPercent="25%"
                app:layout_widthPercent="60%">

                <ImageView
                    android:id="@+id/time_details_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_timer"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Chronometer
                    android:id="@+id/chronometer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/time_details_image" />

                <TextView
                    android:id="@+id/time_details_slash"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/slash"
                    android:textColor="@color/white"
                    android:textSize="16dp"
                    android:layout_marginStart="@dimen/card_margin"
                    app:layout_constraintStart_toEndOf="@+id/chronometer"
                    app:layout_constraintBottom_toBottomOf="@+id/chronometer" />
                <Chronometer
                    android:id="@+id/goals_chronometer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/chronometer"
                    app:layout_constraintTop_toBottomOf="@+id/chronometer" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.percentlayout.widget.PercentRelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/fragment_vertical_margin"
        android:paddingBottom="75dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cycling_goals_card"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/no_history_alert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="You have not cycled this month!"
        android:textSize="@dimen/subheading_size"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/recycler_view"
        app:layout_constraintBottom_toBottomOf="@+id/recycler_view"/>
</androidx.constraintlayout.widget.ConstraintLayout>